--- a/_config.yml
+++ b/_config.yml
@@ -45,15 +45,15 @@ author: John Doe
 profile_image: https://res.cloudinary.com/tbutler-org/image/upload/v1603335469/IMG_4333_3_pubgcc.png #/assets/img/avatar/avatar.jpg
 occupation: Developer
 snippet: I am a Developer
-twitter: 
-twitter_url: https://twitter.com/tbutler0x90
-github: 
-linkedin: 
-website: 
+twitter: tbutler0x90
+github: tcbutler320
+linkedin: tyler-b-a700a1aa
+website: https://tbutler.org
 email: 
 pgp: 
 ctftime: 
 phonenumber: 
+
 
 
   
