update default css settings and example images

--- a/_config.yml
+++ b/_config.yml
@@ -40,11 +40,15 @@ home_popup: false
 # -----------BUILD SETTINGS--------------#
 #========================================#
 theme: 
+markdown: kramdown
+
 plugins:
   - jekyll-feed
   - jekyll-scholar
 sass:
   sass_dir: _sass
+  style: compressed
+
 
 include:
   - _posts
