--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ github: tcbutler320
 linkedin: tyler-b-a700a1aa
 stackoverflow: 12935605
 website: https://tbutler.org
+codepen: tcbutler320
 email: 
 pgp: 
 ctftime: 
@@ -32,10 +33,11 @@ phonenumber:
 # =======================================#
 # -----------THEME SETTINGS--------------#
 #===================================
-nav-color: light                               # options: light, dark | Change the color of the navbar
+nav-color: transparent                               # options: light, dark, transparent | Change the color of the navbar
 font: Crimson Text                             # Choose any Google API Font,see a list here https://fonts.google.com/?
                                                #        My Top choices are [Bitter,Crimson Text] 
-# =======================================#     # These options include popups, modals, and toasts designed to 
+nav-dIcon: "fas fa-caret-down"                 # Change the navbar dropdown (for mobile or small screen sizes) to any fontawesome icon. for a list of icons visit https://fontawesome.com/ 
+                                               # =======================================#     # These options include popups, modals, and toasts designed to 
 # -------USER INTERACTION SETTINGS-------#     #   make the site more interactive for the user or to highlight
 #========================================#     #   certain sections. Powered by BootStrap 4 
 
