update home section with projects and courses sections

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -6,7 +6,7 @@
   Icon: /assets/img/icons/2x/harvard-crop.png
 
 - School: Princeton
-  Degree: Bachelor of Arts International Relations
+  Degree: 
   Program: School of Public and International Affairs
   Start Date: 
   End Date: 
