--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -24,7 +24,7 @@
   id: project4
   description: >
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 0
   date: true
   link: https://example.com
   image: /assets/img/projects/project5.jpeg
