--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,11 +3,11 @@
   Program: Graduate School of Arts & Sciences
   Start Date: 
   End Date: 
-  Icon: /assets/img/icons/2x/harvard-crop.png
+  Icon: /assets/img/icons/2x/harvard-crop.png        # Make this icon small, think 30px/30px
 
 - School: Princeton
   Degree: 
   Program: School of Public and International Affairs
   Start Date: 
   End Date: 
-  Icon: /assets/img/icons/2x/princeton-crop.png
+  Icon: /assets/img/icons/2x/princeton-crop.png      # Make this icon small, think 30px/30px
