--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ phonenumber:
 # =======================================#
 # -----------THEME SETTINGS--------------#
 #===================================
-nav-color: transparent                               # options: light, dark, transparent | Change the color of the navbar
+nav-color: light                               # options: light, dark, transparent, primary | Change the color of the navbar
 footer-color:
 home-highlights-color:
 font: Crimson Text                             # Choose any Google API Font,see a list here https://fonts.google.com/?
