--- a/_data/sections.yml
+++ b/_data/sections.yml
@@ -4,10 +4,17 @@
   url: publications.html
   first: true
   
-- name: Courses
+- name: Coursework
   id: courses
   description: Releveant Course Work
   content: 
+  first: false
+
+- name: Teaching
+  id: teaching
+  description: Courses I've Taught
+  content: 
+  url: teaching.html
   first: false
 
 - name: Projects
