hotfix exclude /docs directory to complete jekyll build

--- a/_config.yml
+++ b/_config.yml
@@ -97,6 +97,8 @@ exclude:
   - vendor/cache/
   - vendor/gems/
   - vendor/ruby/
+  - docs
+  - /docs/
 
 # =======================================#
 # -----JEKYLL SCHOLAR SETTINGS-----------#
