update color options in

--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -4,8 +4,8 @@
   id: POL-240/SPI-312-International-Relations
   data-id: data-harv1
   heading-id: head-harv1
-  Start Date: 
-  End Date: 
+  StartDate: 08/30/2019
+  EndDate: 08/30/2020
   first: true   # one must be true to properly display
   description: >
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -16,8 +16,8 @@
   id: POL-380-Human-Rights
   data-id: data-princ1   
   heading-id: head-princ1  # This can be any random string as long as each teaching set has a unique one. 
-  Start Date: 
-  End Date: 
+  StartDate: 08/30/2019
+  EndDate: 08/30/2020
   first: false
   Icon: /assets/img/icons/2x/princeton-crop.png      # Make this icon small, think 30px/30px
   description: >
