--- a/_config.yml
+++ b/_config.yml
@@ -64,18 +64,10 @@ animate: true                                        # false or true, uses anima
 #========================================#
 home_option: education                               # options: education, skills, timeline
 
-# =======================================#           # These options include popups, modals, and toasts designed to 
-# -------USER INTERACTION SETTINGS-------#           #   make the site more interactive for the user or to highlight
-#========================================#           #   certain sections. Powered by BootStrap 4 
-
-home_modal: false
-home_toasts: false
-home_popup: false
-
 # =======================================#          # These  settings are for demo purposes only, things like 
 # -----------HELP SETTINGS---------------#          #     popup toasts and tooltips designed to help new 
 #========================================#          #     developers as they look into using this theme      
-help_tips: false                                    # options: true, false  | use false to disable these for production mode
+help_tips: true                                    # options: true, false  | use false to disable these for production mode
 
 
 # =======================================#
@@ -138,7 +130,6 @@ font_awesome_id: 32a2b2a489                       # Register for free at https:/
 # =======================================#        # For more information about these settings, visit https://htmlhead.dev #
 # ------------META TAG SETTINGS----------#
 #========================================#
-themecolor: "#4285f4"                             # Theme Color for Chrome, Firefox OS and Opera -->
 google-site-verification:                         #<meta name="google-site-verification" content="verification_token"><!-- Google Search Console -->
 yandex-verification:                              #<meta name="yandex-verification" content="verification_token"><!-- Yandex Webmasters -->
 msvalidate:                                       # meta name="msvalidate.01" content="verification_token"><!-- Bing Webmaster Center -->
