--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ image_alt: A minimalistic jekyll theme for academic    # image description
 # -----------SITE SETTINGS---------------#
 #========================================#: 
 author: John Doe 
-profile_image: http://placehold.it/500x700?text=Insert+Profile+Picture+Here #/assets/img/avatar/avatar.jpeg 
+profile_image: /assets/img/avatar/cropped.png #/assets/img/avatar/avatar.jpeg 
 occupation: 
 snippet: 
 twitter: tbutler0x90
