udpates to UI 2.0

--- a/_config.yml
+++ b/_config.yml
@@ -29,10 +29,18 @@ linkedin: tyler-b-a700a1aa
 stackoverflow: 12935605
 website: https://tbutler.org
 codepen: tcbutler320
-email: 
+medium: tbutler0x90
+email: developer.tbutler@gmail.com
+keybase: tbutler320
 pgp: 
 ctftime: 
 phonenumber: 
+
+#========================================#
+# --------- UI THEMES -------------------#
+#========================================#
+ui_theme: ivy 
+
 
 # =======================================#
 # -----------BLOG SETTINGS---------------#
