--- a/_data/sections.yml
+++ b/_data/sections.yml
@@ -1,25 +1,25 @@
 - name: Publications
   id: publications
-  description: My Publications
+  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
   url: publications.html
   first: true
   
 - name: Coursework
   id: courses
-  description: Releveant Course Work
+  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
   content: 
   first: false
 
 - name: Teaching
   id: teaching
-  description: Courses I've Taught
+  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
   content: 
   url: teaching.html
   first: false
 
 - name: Projects
   id: projects
-  description: My Projects
+  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
   content: 
   url: projects.html
   first: false
