--- a/_data/themes.yml
+++ b/_data/themes.yml
@@ -1,6 +1,61 @@
-themes_list: Themes List
-options: 
+minimal:
+    name: minimal
+    nav-color: "#ffffff"
+    nav-text: "#272343"
+    title-font: "Noto Sans JP"
+    link-font: "#272343"
+    link-color: "#272343"
+    link-font: "Poppins"
+    font: "Poppins"
+    font-color: "Black"
+    social-color: "Black"
+    button-color: "black"
+    education-title-font: "Noto Sans JP"
+    education-title-size: "18px"
+    education-entry-font: "Noto Sans JP"
+    education-entry-size: "18px"
+    education-section-size: "15px"
+    certification-title-font: "Noto Sans JP"
+    certification-title-size: "18px"
+    certification-entry-font: "Noto Sans JP"
+    certification-entry-size: "18px"
+    certification-section-size: "15px"
+    highlights-tab-color: "White"
+    border-style: ""
+    post-tag-size: "20px"
+    post-title-size: "36px"
+    post-author-size: "15px"
+    post-font-weight: "700"
 
-- name: Demo
-  nav: "#00334e"
+ivy:
+    name: ivy
+    nav-color: "#10292e"
+    nav-text: "#149f98"
+    title-font: "Noto Sans JP"
+    link-font: "#272343"
+    link-color: "#272343"
+    link-font: "Poppins"
+    font: "Poppins"
+    font-color: "Black"
+    social-color: "#CCCCCC"
+    footer-social-color: "Black"
+    button-color: "black"
+    home-highlight-background: "#10292e"
+    home-highlight-header-text: "#149f98"
+    education-title-font: "Noto Sans JP"
+    education-title-size: "18px"
+    education-entry-font: "Noto Sans JP"
+    education-entry-size: "18px"
+    education-section-size: "15px"
+    certification-title-font: "Noto Sans JP"
+    certification-title-size: "18px"
+    certification-entry-font: "Noto Sans JP"
+    certification-entry-size: "18px"
+    certification-section-size: "15px"
+    highlights-tab-color: "White"
+    border-style: ""
+    post-tag-size: "20px"
+    post-title-size: "36px"
+    post-author-size: "15px"
+    post-font-weight: "700"
 
